# ttrpg_maker

./: .gitignore  Cargo.toml
documentation/: components.txt
entities/: Cargo.toml
entities/src/: lib.rs
entities/tests/: component_creation_tests.rs
entities_and_narratives/: Cargo.toml
gui/: Cargo.toml
gui/src/: lib.rs
libtext/: Cargo.toml
libtext/src/: lib.rs
libtext/src/record_me/: mod.rs
libtext/src/transcribe_me/: mod.rs
narratives/: Cargo.toml
narratives/src/: .lib.rs.swp  lib.rs
narratives/tests/: integration_test_text_creation.rs
roll_dice/: Cargo.toml
roll_dice/src/: lib.rs
roll_dice/tests/: integration_test_rolls.rs
src/: main.rs
store_rpg/: Cargo.toml
store_rpg/src/: lib.rs
