[package]
name = "ttrpg_maker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.21.3"
egui = "0.21.0"
egui_winit_platform = "0.18.0"
hound = "3.5.0"
whisper-rs = "0.4.0"
winit = "0.28.1"


[workspace]
members = [
	"roll_dice",
	"narratives",
	"entities"
]
