[package]
name = "gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entities = {path = "../entities"}
narratives = {path = "../narratives"}
roll_dice = {path = "../roll_dice"}
store_rpg = {path = "../store_rpg"}
libtext = {path = "../libtext"}
eframe = "0.21.3"
sqlite = "0.30.4"
regex = "1.7.2"

[dependencies.uuid]
version = "1.3.3"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
