[package]
name = "narratives"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pithy = "0.1.7"
roll_dice = {path = "../roll_dice"}
serde = {version = "1.0.164", features = ["derive"]}
serde_json = "1.0.97"
#External crates
#pithy
#whisper-rs

