[package]
name = "store_rpg"
version = "0.1.0"
edition = "2021"
description = "A crate package used for the storing and retrieval of ttrpg components in a local database."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entities = {path = "../entities"}
narratives = {path = "../narratives"}
roll_dice = {path = "../roll_dice"}
sqlite = "0.30.4"
